project(Coroutines)
set(CMAKE_CXX_STANDARD 20)
add_executable(coroutines main.cpp)
add_executable(exercise1 exercise1.cpp)
add_executable(exercise2 exercise2.cpp)
add_executable(exercise3 exercise3.cpp)
add_executable(exercise4 exercise4.cpp)
add_executable(exercise5 exercise5.cpp)
add_executable(exercise6 exercise6.cpp)
add_executable(exercise7 exercise7.cpp)
add_executable(exercise8 exercise8.cpp)
